2023-03-10  Marc A. Smith  <marc.smith@quantum.com>

	rc.d/common: in wait_for_stop() and wait_for_pid_stop() take an optional second argument for overriding the default stop timeout value, in wait_for_stop() use 'pidof -x' so we can properly get PIDs of scripts (eg, via python); pwatcher.sh: in stop() try TERM first, ABRT second, and KILL last with short stop-timeouts in between (handles misbehaving processes better); alua RA: improvements in operation duration (shorter), lots of code cleanup with help from 'shellcheck' recommendations

2023-03-01  Marc A. Smith  <marc.smith@quantum.com>

	rc.libvirtdexporter: updates for the new pwatcher.sh arguments / handling; pwatcher.sh: handling touching the lock file instead of in rc script, and support an additional (optional) status test that can be done after checking for the PID

2023-02-26  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '410_updates' into 4.x.x

2023-02-25  Marc A. Smith  <marc.smith@quantum.com>

	added the async-lru and aiofile packages for the Python.chroot recipe (via the pip3 installer, along with a couple deps)

2023-02-20  Marc A. Smith  <marc.smith@quantum.com>

	iso_installer.sh: handle non-zero exit statuses from critical functions by dropping into a bash shell

2023-02-16  Marc A. Smith  <marc.smith@quantum.com>

	include the real 'dmesg' tool from the util-linux package (we left the Busybox command enabled so we have it in initramfs in case it's needed for debugging; during init, Busybox should not make a link since the real binary already exists)

2023-02-06  Marc A. Smith  <marc.smith@quantum.com>

	updates for MOFED 5.8; etc/rc.d/common: added the wait_for_pid_stop() helper function; rc.libvirtdexporter: use quiet grep and the new wait_for_pid_stop() function after sending SIGTERM

2023-02-05  Marc A. Smith  <marc.smith@quantum.com>
