@@ -95,7 +95,7 @@ eff47a4ecd833fbf18de9686632a70ee8d0794b79aecb217ebd0ce11db4cd0db  Linux-PAM-1.3.
 0c1ba3b1555edefb7c32ae8cd6a3e04322056bc087918f07189eeedfc8b81e01  ipmitool-1.8.18.tar.bz2
 896c6db24b8f903e224aa7d48d6d04321a36f01f7e467d6f860f55da3a2c4b26  sysklogd-new_remote_opt_20190715.tar.xz
 503f91ab0af4846f34f0444ab71c4b286123f0044a4964f1ae781486c617f2e2  less-530.tar.gz
-277b86122839591da97e43fd761771b19924b2264f25ac4f1204a9e35182b82c  libqb-1.0.5.tar.xz
+e21eb8708935adfa2f026c6492a5cc522a3bbf510588f6d605f5f337d212d35b  libqb-2.0.6.tar.gz
 2e7ddb9687a6a5cc1f41626659eac2ad9d6b5875629156b92f693bd404d8ae63  irqbalance-1.8.0.tar.gz
 ecd4233bf023589125d53a4f4a9af19147a2dd8999f72c7768b1d500809bee99  ethtool-5.0.tar.xz
 ecbed20056296a65b6a4f5526c477e3ae5cc284cb01a15507785ddb23831e9a4  postgresql-9.6.13.tar.bz2
@@ -151,7 +151,7 @@ d9d6826f10ce3887950d709b53ee1d8c1849a70fa38e91d5896ad8cbc6ba3c57  htop-2.2.0.tar
 63b9ad7d2e8a6dbddb43cf4c43e6bcec25e085371938d35e198fd7bb6b44bc61  btier-1.3.11.tar.gz
 588546b945bba4b70b6a3a616e80b4ab466e3f33024a352fc2198112cdbb3ae2  gperf-3.1.tar.gz
 4cc6ab9fbd97ccccba3f00cf3e11e3272ff48cdf2141a4c66c90e29dcb733c58  dlm-4.0.8.tar.xz
-9bd4707bb271df16f8d543ec782eb4c35ec0330b7be696b797da4bd8f058a25d  corosync-2.4.4.tar.gz
+cb572b99df91c2abb98b52c8b1313b89b6146d212b0e0028203cfecafe942fba  corosync-2.4.6.tar.gz
 96799e3ad91408f0f8bae3607b21376861325f57105b5af90f89db466c5b637b  pacemaker-1.1.20.tar.xz
 7c5962be6068c78d5256e8fc979cf327988f7560705bb9cc25b508c50ca997c0  multipath-tools-0.8.7.tar.gz
 acbd19d5c4e1cac6793d5c1ff2a54eb6c8dc80013e5aef97d9c69a548d1fb94c  json-c-0.13.1-20180305.tar.xz
