@@ -1,3 +1,7 @@
+2023-03-11  Marc A. Smith  <marc.smith@quantum.com>
+
+	updated libqb to 2.0.6 and corosync to 2.4.6; include websockets==10.4 with Python; fstab: don't size size restrictions for /dev and /dev/shm (follows suit of other distros); fixed a couple bugs in the 'ocf:esos:alua' RA
+
 2023-03-10  Marc A. Smith  <marc.smith@quantum.com>
 
 	rc.d/common: in wait_for_stop() and wait_for_pid_stop() take an optional second argument for overriding the default stop timeout value, in wait_for_stop() use 'pidof -x' so we can properly get PIDs of scripts (eg, via python); pwatcher.sh: in stop() try TERM first, ABRT second, and KILL last with short stop-timeouts in between (handles misbehaving processes better); alua RA: improvements in operation duration (shorter), lots of code cleanup with help from 'shellcheck' recommendations
